styles/navbar.css
nav {
  height: 10vh;
  background-color: rgb(141 199 194);
  width: 100%;
  display: flex;
  justify-content: space-around;
  align-items: center;
}
nav div {
  display: flex;
  align-items: center;
  color: #ebebeb;
  letter-spacing: 3px;
  font-weight: 200;
  font-size: 3vw;
}
nav img {
  height: 10vh;
}
nav ul {
  display: flex;
  justify-content: space-around;
  width: 40%;
}
nav li {
  list-style: none;
}
nav a {
  color: #ebebeb;
  text-decoration: none;
  font-size: 2vw;
  font-weight: 250;
  letter-spacing: normal;
  cursor: pointer;
}
nav li :hover {
  color: #253257;
  text-shadow: 1px 1px dimgray;
}
@media (min-width: 850px) and (max-width: 1024px) {
  /* Endre stil i forhold til bredde*/
  nav ul {
    width: 50%;
  }
  nav a {
    font-size: 3.5vh;
  }
}
@media only screen and (max-width: 850px) {
  /* Endre stil i forhold til bredde*/
  nav ul {
    width: 100%;
  }
  nav div {
    display: none;
  }
  body {
    overflow-x: hidden;
  }
  nav a {
    font-size: 4vw;
  }
}

